# myanonamouse-mcp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  THIRD_PARTY_LICENSES.html  about.toml
.githooks/: pre-commit
api-docs/: Search-Form-HTML-fragment.html
docs/api/: top-10-torrents.md
src/: main.rs  persist.rs
src/mam/: CLAUDE.md  api.rs  format.rs  lookup.rs  mod.rs  types.rs
src/oauth/: authorize.rs  cleanup.rs  discovery.rs  middleware.rs  mod.rs  persist.rs  registration.rs  state.rs  token.rs
src/tools/: CLAUDE.md  mod.rs
