[package]
name = "myanonamouse-mcp"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "myanonamouse-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
