[package]
name = "myanonamouse-mcp"
version = "0.3.4"
edition = "2021"
license = "MIT"
license-file = "LICENSE"
default-run = "myanonamouse-mcp"

[[bin]]
name = "myanonamouse-mcp"
path = "src/main.rs"

[[bin]]
name = "mam-count-languages"
path = "src/bin/count_languages.rs"

[dependencies]
rmcp = { version = "1.2.0", features = ["server", "transport-io", "transport-streamable-http-server", "schemars"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
axum = "0.8"
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
chrono = { version = "0.4.44", default-features = false, features = ["std"] }
subtle = "2"
htmd = "0.5"
